Fixing the vertical alignment of the header logo

--- a/media/css/base.less
+++ b/media/css/base.less
@@ -129,6 +129,10 @@ p {
 	line-height: 1em;
 }
 
+#header img {
+	vertical-align: -36%;
+}
+
 /* ---[ Main Navigation ]--------------------------------------------------- */
 
 #header ul {
